feat: implement FJ-33 email campaigns flow
